--- a/MCEI.SysRegisAdmin.WebApp/Views/Role/Edit.cshtml
+++ b/MCEI.SysRegisAdmin.WebApp/Views/Role/Edit.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Modificar Rol";
 }
 
-<h1>Crear Nuevo Rol</h1>
+<h1>Editar Rol Existente</h1>
 <hr />
 <form asp-action="Edit">
     <div asp-validation-summary="ModelOnly"></div>
