--- a/MCEI.SysRegisAdmin.WebApp/Views/Role/Create.cshtml
+++ b/MCEI.SysRegisAdmin.WebApp/Views/Role/Create.cshtml
@@ -5,6 +5,7 @@
 }
 
 <h1>Crear Nuevo Rol</h1>
+<span>@ViewBag.Error</span>
 <hr />
 <form asp-action="Create">
     <div asp-validation-summary="ModelOnly"></div>
