--- a/MCEI.SysRegisAdmin.WebApp/Views/Role/Edit.cshtml
+++ b/MCEI.SysRegisAdmin.WebApp/Views/Role/Edit.cshtml
@@ -5,6 +5,7 @@
 }
 
 <h1>Editar Rol Existente</h1>
+<span>@ViewBag.Error</span>
 <hr />
 <form asp-action="Edit">
     <div asp-validation-summary="ModelOnly"></div>
