Nuevo Icono De Pestaña

--- a/MCEI.SysRegisAdmin.WebApp/Views/Shared/_Layout.cshtml
+++ b/MCEI.SysRegisAdmin.WebApp/Views/Shared/_Layout.cshtml
@@ -4,6 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - Mision Cristiana Elim Izalco</title>
+    <link rel="icon" href="/assets/img/logos/Logo-Sin-Letras-White.png" type="image/x-icon">
     <link rel="stylesheet" href="~/MCEI.SysRegisAdmin.WebApp.styles.css" asp-append-version="true" />
 </head>
 <body>
