--- a/MCEI.SysRegisAdmin.WebApp/Views/Shared/_Layout.cshtml
+++ b/MCEI.SysRegisAdmin.WebApp/Views/Shared/_Layout.cshtml
@@ -6,7 +6,7 @@
     <title>@ViewData["Title"] - Mision Cristiana Elim Izalco</title>
     <link rel="icon" href="/assets/img/logos/Logo-Sin-Letras-White.png" type="image/x-icon">
     <link rel="stylesheet" href="~/MCEI.SysRegisAdmin.WebApp.styles.css" asp-append-version="true" />
-    <link href="/plugins/SweetAlert2/css/min.css" rel="stylesheet" />
+    <link href="~/plugins/SweetAlert2/css/min.css" rel="stylesheet" />
 </head>
 <body>
 
@@ -17,7 +17,7 @@
     </div>
 
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
-    <script src="/plugins/SweetAlert2/js/min.js"></script>
+    <script src="~/plugins/SweetAlert2/js/min.js"></script>
     @await RenderSectionAsync("Scripts", required: false)
 </body>
 </html>
