--- a/MCEI.SysRegisAdmin.WebApp/Views/Role/Edit.cshtml
+++ b/MCEI.SysRegisAdmin.WebApp/Views/Role/Edit.cshtml
@@ -7,7 +7,7 @@
 <h1>Editar Rol Existente</h1>
 <span>@ViewBag.Error</span>
 <hr />
-<form asp-action="Edit">
+<form asp-action="Edit" id="Form" onsubmit="CreateRecord(event)">
     <div asp-validation-summary="ModelOnly"></div>
     <input type="hidden" asp-for="Id" />
     <div>
@@ -36,6 +36,37 @@
         @if (!string.IsNullOrEmpty(ViewBag.Error))
         {
             @:showErrorAlert('@ViewBag.Error');
+        }
+        function CreateRecord(e) {
+            e.preventDefault();
+
+            const form = document.getElementById('Form');
+            const nameInput = document.getElementById('Name');
+
+            if (!nameInput.value.trim()) {
+                // Si el campo está vacío, no hacemos nada
+                return;
+            }
+            const regex = /^[A-ZÑa-zñ/ ]+$/;
+            if (!regex.test(nameInput.value.trim())) {
+                // Si el valor no contiene solo letras, marcamos como inválido
+                Swal.fire({
+                    title: 'Error',
+                    text: 'Por favor, Ingrese Solo Letras En El Campo.',
+                    icon: 'error'
+                });
+                return;
+            }
+            Swal.fire({
+                title: '¿Modificar Registro Existente?',
+                icon: 'question',
+                showCancelButton: true,
+                confirmButtonText: 'Si, Modificar Registro'
+            }).then((result) => {
+                if (result.isConfirmed) {
+                    form.submit();
+                }
+            });
         }
     </script>
 } 
