--- a/MCEI.SysRegisAdmin.WebApp/Views/Role/Create.cshtml
+++ b/MCEI.SysRegisAdmin.WebApp/Views/Role/Create.cshtml
@@ -7,65 +7,51 @@
 <h1>Crear Nuevo Rol</h1>
 <span>@ViewBag.Error</span>
 <hr />
-<form asp-action="Create" id="Form" onsubmit="CreateRecord(event)">
-    <div asp-validation-summary="ModelOnly"></div>
-    <div>
-        <label asp-for="Name"></label>
-        <input asp-for="Name"/>
-        <span asp-validation-for="Name"></span>
-    </div>
-    <div>
-        <input type="submit" value="Guardar Rol"/>
-    </div>
-</form>
-<div>
-    <a asp-action="Index">Regresar a La Lista</a>
-</div>
 
-@section Scripts{
-    <script>
-        function showErrorAlert(message) {
-            Swal.fire({
-                title: 'Error',
-                text: message,
-                icon: 'error'
-            });
-        }
-        // Mostrar alerta de ViewBag.Error si es necesario
-        @if (!string.IsNullOrEmpty(ViewBag.Error))
-        {
-            @:showErrorAlert('@ViewBag.Error');
-        }
-        function CreateRecord(e) {
-            e.preventDefault();
-
-            const form = document.getElementById('Form');
-            const nameInput = document.getElementById('Name');
-
-            if (!nameInput.value.trim()) {
-                // Si el campo está vacío, no hacemos nada
-                return;
-            }
-            const regex = /^[A-ZÑa-zñ/ ]+$/;
-            if (!regex.test(nameInput.value.trim())) {
-                // Si el valor no contiene solo letras, marcamos como inválido
-                Swal.fire({
-                    title: 'Error',
-                    text: 'Por favor, Ingrese Solo Letras En El Campo.',
-                    icon: 'error'
-                });
-                return;
-            }
-            Swal.fire({
-                title: '¿Guardar Nuevo Registro?',
-                icon: 'question',
-                showCancelButton: true,
-                confirmButtonText: 'Si, Guardar Registro'
-            }).then((result) => {
-                if (result.isConfirmed) {
-                    form.submit();
+<script>
+    async function ShowCreatePrompt() {
+        const { value: name } = await Swal.fire({
+            title: 'Ingrese El Nombre Del Rol',
+            input: 'text',
+            inputAttributes: {
+                placeholder: 'Ingresar' // Agregamos el atributo para placeholder
+            },
+            inputLabel: 'Nombre del Rol',
+            showCancelButton: true,
+            inputValidator: (value) => {
+                if (!value) {
+                    return 'Por Favor, Ingresa Un Nombre Valido.';
+                } else if (!/^[a-zA-ZáéíóúÁÉÍÓÚñÑ/ ]+$/.test(value.trim())) {
+                    return 'Solo Solo Se Permiten Letras y Espacios En El Nombre.';
                 }
-            });
+                return ''; // No hay mensaje de error si se supera la validación
+            },
+            reverseButtons: true // Adición de la propiedad 'reverseButtons' para el orden personalizado de los botones
+        });
+
+        if (!name) {
+            window.location.href = '@Url.Action("Index", "Role")'; // Redirigir a la acción Índice si el nombre está vacío
+            return; // Salga de la función si el nombre está vacío
         }
-    </script>
-} 
+
+        document.getElementById('Name').value = name;
+        Swal.fire({
+            title: '¿Guardar Nuevo Registro?',
+            icon: 'question',
+            showCancelButton: true,
+            confirmButtonText: 'Si, Guardar Registro'
+        }).then((result) => {
+            if (result.isConfirmed) {
+                document.getElementById('Form').submit();
+            } else {
+                window.location.href = '@Url.Action("Index", "Role")'; // Redirigir a la acción Índice al hacer clic en el botón 'Cancelar'
+            }
+        });
+    }
+    window.onload = ShowCreatePrompt; // Llamar a la función al cargar la página
+</script>
+
+<form asp-action="Create" id="Form">
+    <div asp-validation-summary="ModelOnly"></div>
+    <input type="hidden" id="Name" name="Name" />
+</form>
