--- a/MCEI.SysRegisAdmin.WebApp/Views/Role/Index.cshtml
+++ b/MCEI.SysRegisAdmin.WebApp/Views/Role/Index.cshtml
@@ -106,7 +106,7 @@
             }
         });
 
-        // Check for success messages and display toasts
+        // Comprobar si hay mensajes de éxito y mostrar notificaciones del sistema
         const successMessages = {
             Creado: '@TempData["SuccessMessageCreate"]',
             Modificado: '@TempData["SuccessMessageUpdate"]',
