--- a/MCEI.SysRegisAdmin.WebApp/Views/Role/Edit.cshtml
+++ b/MCEI.SysRegisAdmin.WebApp/Views/Role/Edit.cshtml
@@ -16,7 +16,7 @@
             inputAttributes: {
                 placeholder: 'Ingresar' // Agregamos el atributo para placeholder
             },
-            inputLabel: 'Nombre del Rol',
+            inputLabel: 'Nombre del Rol Actual: @Model.Name',
             showCancelButton: true,
             inputValidator: (value) => {
                 if (!value) {
