--- a/MCEI.SysRegisAdmin.WebApp/Views/Role/Details.cshtml
+++ b/MCEI.SysRegisAdmin.WebApp/Views/Role/Details.cshtml
@@ -6,17 +6,25 @@
 
 <h1>Detalles Del Rol</h1>
 <hr />
-<div>
-    <dl>
-        <dt>
-            @Html.DisplayNameFor(model => model.Name)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.Name)
-        </dd>
-    </dl>
-</div>
-<div>
-    @Html.ActionLink("Modificar Rol", "Edit", new { id = Model.Id }, new { @class = "" }) |
-    <a asp-action="Index">Regresar a La Lista</a>
-</div>
+
+<script>
+    async function ShowDetailsPrompt() {
+        const result = await Swal.fire({
+            title: `Detalles del Rol`,
+            text: `Nombre: ${'@Model.Name'}`,
+            showCloseButton: true,
+            showCancelButton: true,
+            cancelButtonText: 'Regresar',
+            confirmButtonText: 'Modificar',
+            reverseButtons: true
+        });
+
+        // Si el usuario elige modificar, redirige a la acción Edit
+        if (result.isConfirmed) {
+            window.location.href = '@Url.Action("Edit", "Role", new { id = Model.Id })';
+        } else {
+            window.location.href = '@Url.Action("Index", "Role")'; // Redirige a la lista de roles
+        }
+    }
+    window.onload = ShowDetailsPrompt; // Asigna la función ShowDetailsPrompt al evento de carga de la página
+</script>
