--- a/MCEI.SysRegisAdmin.WebApp/Views/Role/Edit.cshtml
+++ b/MCEI.SysRegisAdmin.WebApp/Views/Role/Edit.cshtml
@@ -18,6 +18,8 @@
             },
             inputLabel: 'Nombre del Rol Actual: @Model.Name',
             showCancelButton: true,
+            confirmButtonText: 'Modificar',
+            cancelButtonText: 'Cancelar',
             inputValidator: (value) => {
                 if (!value) {
                     return 'Por Favor, Ingresa Un Nombre Valido.';
