--- a/MCEI.SysRegisAdmin.WebApp/Views/User/Index.cshtml
+++ b/MCEI.SysRegisAdmin.WebApp/Views/User/Index.cshtml
@@ -16,15 +16,15 @@
 <form asp-action="Index">
     <div>
         <label>Nombre</label>
-        <input type="text" name="Name" />
+        <input type="text" name="Name" placeholder="Ingresar" />
     </div>
     <div>
         <label>Apellido</label>
-        <input type="text" name="LastName" />
+        <input type="text" name="LastName" placeholder="Ingresar" />
     </div>
     <div>
         <label>Correo Electronico</label>
-        <input type="text" name="Email" />
+        <input type="text" name="Email" placeholder="Ingresar" />
     </div>
     <div>
         <label>Estatus</label>
