--- a/MCEI.SysRegisAdmin.WebApp/Views/User/Create.cshtml
+++ b/MCEI.SysRegisAdmin.WebApp/Views/User/Create.cshtml
@@ -36,7 +36,7 @@
     <div>
         <label asp-for="Email"></label>
         <span class="text-danger">*</span>
-        <input asp-for="Email" placeholder="Ingresar" readonly />
+        <input asp-for="Email" placeholder="Ingresar"/>
         <span asp-validation-for="Email"></span>
     </div>
     <div>
