--- a/MCEI.SysRegisAdmin.WebApp/Views/Shared/_Layout.cshtml
+++ b/MCEI.SysRegisAdmin.WebApp/Views/Shared/_Layout.cshtml
@@ -7,6 +7,7 @@
     <link rel="icon" href="/assets/img/logos/Logo-Sin-Letras-White.png" type="image/x-icon">
     <link rel="stylesheet" href="~/MCEI.SysRegisAdmin.WebApp.styles.css" asp-append-version="true" />
     <link href="~/plugins/SweetAlert2/css/min.css" rel="stylesheet" />
+    <link href="~/plugins/DataTables/css/min.css" rel="stylesheet" />
 </head>
 <body>
     <nav>
@@ -56,6 +57,7 @@
 
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/plugins/SweetAlert2/js/min.js"></script>
+    <script src="~/plugins/DataTables/js/min.js"></script>
     @await RenderSectionAsync("Scripts", required: false)
 </body>
 </html>
