--- a/MCEI.SysRegisAdmin.WebApp/Views/ProfessionOrStudy/Index.cshtml
+++ b/MCEI.SysRegisAdmin.WebApp/Views/ProfessionOrStudy/Index.cshtml
@@ -9,7 +9,7 @@
 <form asp-action="Index">
     <div>
         <label>Nombre</label>
-        <input type="text" name="Name" />
+        <input type="text" name="Name" placeholder="Ingresar"/>
     </div>
     <div>
         <input type="submit" value="Buscar" /> &nbsp;&nbsp; |
