--- a/MCEI.SysRegisAdmin.WebApp/Views/Role/Details.cshtml
+++ b/MCEI.SysRegisAdmin.WebApp/Views/Role/Details.cshtml
@@ -10,7 +10,7 @@
 <script>
     async function ShowDetailsPrompt() {
         const result = await Swal.fire({
-            title: `Detalles del Rol`,
+            title: `Detalles Del Rol`,
             text: `Nombre: ${'@Model.Name'}`,
             showCloseButton: true,
             showCancelButton: true,
