Navegabilidad entre _Layout y Membership

--- a/MCEI.SysRegisAdmin.WebApp/Views/Shared/_Layout.cshtml
+++ b/MCEI.SysRegisAdmin.WebApp/Views/Shared/_Layout.cshtml
@@ -29,7 +29,7 @@
                         <span>Administracion</span>
                         <ul>
                             <li>
-                                <a asp-area="" asp-controller="#" asp-action="#">Membresia</a>
+                                <a asp-area="" asp-controller="Membership" asp-action="Index">Membresia</a>
                             </li>
                         </ul>
                     </li>
