Import References _Layout Select2

--- a/MCEI.SysRegisAdmin.WebApp/Views/Shared/_Layout.cshtml
+++ b/MCEI.SysRegisAdmin.WebApp/Views/Shared/_Layout.cshtml
@@ -9,6 +9,7 @@
     <link href="~/plugins/SweetAlert2/css/min.css" rel="stylesheet" />
     <link href="~/plugins/DataTables/css/min.css" rel="stylesheet" />
     <link href="~/plugins/DataTables/css/dataTable.css" rel="stylesheet" />
+    <link href="~/plugins/Select2/css/min.css" rel="stylesheet" />
 </head>
 <body>
     @if(User.Identity.IsAuthenticated)
@@ -77,6 +78,7 @@
     <script src="~/plugins/SweetAlert2/js/min.js"></script>
     <script src="~/plugins/DataTables/js/min.js"></script>
     <script src="~/plugins/DataTables/js/dataTable.js"></script>
+    <script src="~/plugins/Select2/js/min.js"></script>
     @await RenderSectionAsync("Scripts", required: false)
 </body>
 </html>
