--- a/MCEI.SysRegisAdmin.WebApp/Views/Shared/_Layout.cshtml
+++ b/MCEI.SysRegisAdmin.WebApp/Views/Shared/_Layout.cshtml
@@ -79,6 +79,7 @@
     <script src="~/plugins/DataTables/js/min.js"></script>
     <script src="~/plugins/DataTables/js/dataTable.js"></script>
     <script src="~/plugins/Select2/js/min.js"></script>
+    <script src="~/plugins/BarCode/js/min.js"></script>
     @await RenderSectionAsync("Scripts", required: false)
 </body>
 </html>
