--- a/MCEI.SysRegisAdmin.WebApp/Views/Home/Index.cshtml
+++ b/MCEI.SysRegisAdmin.WebApp/Views/Home/Index.cshtml
@@ -2,4 +2,5 @@
     ViewData["Title"] = "Inicio";
 }
 
-<h1>Welcome</h1>
+<h1>Bienvenido/a</h1>
+<h3>Sistema De Registro Administrativo Elim Izalco</h3>
