--- a/MCEI.SysRegisAdmin.WebApp/Views/Shared/_Layout.cshtml
+++ b/MCEI.SysRegisAdmin.WebApp/Views/Shared/_Layout.cshtml
@@ -24,6 +24,9 @@
                             <li>
                                 <a asp-area="" asp-controller="Home" asp-action="Index">Inicio</a>
                             </li>
+                            <li>
+                                <a asp-area="" asp-controller="Dashboard" asp-action="Index">Dashboard</a>
+                            </li>
                         </ul>
                     </li>
                     <li>
@@ -80,7 +83,7 @@
     <script src="~/plugins/DataTables/js/dataTable.js"></script>
     <script src="~/plugins/Select2/js/min.js"></script>
     <script src="~/plugins/BarCode/js/min.js"></script>
-    <script src="~/plugins/ChartJS/js/min.js"></script>
+    <script src="~/plugins/ChartJS/js/Chart.min.js"></script>
     @await RenderSectionAsync("Scripts", required: false)
 </body>
 </html>
