--- a/MCEI.SysRegisAdmin.WebApp/Views/Shared/_Layout.cshtml
+++ b/MCEI.SysRegisAdmin.WebApp/Views/Shared/_Layout.cshtml
@@ -10,6 +10,7 @@
     <link href="~/plugins/DataTables/css/min.css" rel="stylesheet" />
     <link href="~/plugins/DataTables/css/dataTable.css" rel="stylesheet" />
     <link href="~/plugins/Select2/css/min.css" rel="stylesheet" />
+    <script src="~/plugins/ChartJs/js/Chart.min.js"></script>
 </head>
 <body>
     @if(User.Identity.IsAuthenticated)
