Navegabilidad del Layout a Privilege

--- a/MCEI.SysRegisAdmin.WebApp/Views/Shared/_Layout.cshtml
+++ b/MCEI.SysRegisAdmin.WebApp/Views/Shared/_Layout.cshtml
@@ -44,6 +44,9 @@
                             <li>
                                 <a asp-area="" asp-controller="ProfessionOrStudy" asp-action="Index">Profesion u Oficio</a>
                             </li>
+                            <li>
+                                <a asp-area="" asp-controller="Privilege" asp-action="Index">Privilegios</a>
+                            </li>
                         </ul>
                     </li>
                     <li>
